--- a/index.html
+++ b/index.html
@@ -1,37 +1,686 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Memory Match Game</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="gameContainer">
-    <h1>Memory Match</h1>
-    <div id="statusBar">
-      <div>Level: <span id="level">1</span></div>
-      <div>Time: <span id="timer">60</span></div>
-      <div>Score: <span id="score">0</span></div>
-    </div>
-    <div id="gameBoard"></div>
-    <div id="popup" class="popup">
-      <p id="popupText">Level Completed!</p>
-      <button id="restartBtn">Restart</button>
-      <button id="continueBtn">Continue</button>
-    </div>
-    <div id="footer">Powered by NAS</div>
-  </div>
-  
-  <!-- AdMob Placeholder (only works in real app) -->
-  <script>
-    var AdMob = {
-      rewarded: {
-        prepare: (cb, err) => { cb && cb(); },
-        show: (cb) => { setTimeout(cb, 2000); }
-      }
-    };
-  </script>
+<!DOCTYPE html>  <html lang="hi">  
+<head>  
+<meta charset="UTF-8" />  
+<meta name="viewport" content="width=360, initial-scale=1, maximum-scale=1, user-scalable=no" />  
+<title>Memory Match Game</title>  
+<style>  
+  * { box-sizing: border-box; }  
+  body, html {  
+    margin: 0; padding: 0; height: 100%;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);  
+    color: #000;  
+    overflow: hidden;  
+    user-select: none;  
+  }  
+  #app {  
+    max-width: 360px;  
+    height: 640px;  
+    margin: 0 auto;  
+    background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%);  
+    display: flex;  
+    flex-direction: column;  
+    position: relative;  
+    border-radius: 12px;  
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);  
+  }  
+  header {  
+    padding: 12px 16px 0 16px;  
+    background: transparent;  
+    text-align: center;  
+  }  
+  header h1 {  
+    margin: 0 0 5px 0;  
+    font-size: 2.1rem;  
+    font-weight: 900;  
+    color: orange;  
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.3);  
+    letter-spacing: 1px;  
+  }  
+  #level {  
+    font-weight: bold;  
+    color: #222;  
+    font-size: 1.2rem;  
+    margin-bottom: 12px;  
+  }  
+  #toggles {  
+    display: flex;  
+    justify-content: center;  
+    gap: 38px;  
+    margin-bottom: 12px;  
+  }  
+  .toggle-group {  
+    display: flex;  
+    flex-direction: column;  
+    align-items: center;  
+    gap: 2px;  
+  }  
+  .switch {  
+    position: relative;  
+    display: inline-block;  
+    width: 46px;  
+    height: 26px;  
+  }  
+  .switch input {  
+    opacity: 0;  
+    width: 0;  
+    height: 0;  
+  }  
+  .slider {  
+    position: absolute;  
+    cursor: pointer;  
+    top: 0; left: 0; right: 0; bottom: 0;  
+    background-color: #ccc;  
+    transition: .4s;  
+    border-radius: 26px;  
+  }  
+  .slider:before {  
+    position: absolute;  
+    content: "";  
+    height: 20px; width: 20px;  
+    left: 3px; bottom: 3px;  
+    background-color: white;  
+    transition: .4s;  
+    border-radius: 50%;  
+    box-shadow: 0 2px 6px rgba(0,0,0,0.12);  
+  }  
+  .switch input:checked + .slider {  
+    background: linear-gradient(135deg, #ffb347, #ffcc33);  
+  }  
+  .switch input:checked + .slider:before {  
+    transform: translateX(20px);  
+  }  
+  .switch-label {  
+    font-size: 1rem;  
+    color: #333;  
+    font-weight: 600;  
+    margin-top: 2px;  
+    user-select: none;  
+    letter-spacing: 0.3px;  
+  }  
+  #status-bar {  
+    display: flex;  
+    justify-content: space-around;  
+    padding: 6px 0 12px;  
+    font-size: 1.1rem;  
+  }  
+  #score {  
+    color: green;  
+    font-weight: 600;  
+  }  
+  #timer {  
+    color: red;  
+    font-weight: 600;  
+  }  
+  #game-board {  
+    flex: 1;  
+    display: grid;  
+    gap: 8px;  
+    padding: 8px;  
+    justify-content: center;  
+    align-content: center;  
+  }  
+  .card {  
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);  
+    border-radius: 8px;  
+    cursor: pointer;  
+    perspective: 600px;  
+    position: relative;  
+    min-width: 70px;  
+    min-height: 70px;  
+  }  
+  .card-inner {  
+    position: relative;  
+    width: 100%;  
+    height: 100%;  
+    transition: transform 0.4s cubic-bezier(.4,2,.6,1);  
+    transform-style: preserve-3d;  
+  }  
+  .card.flipped .card-inner {  
+    transform: rotateY(180deg);  
+  }  
+  .card-front, .card-back {  
+    position: absolute;  
+    width: 100%;  
+    height: 100%;  
+    border-radius: 8px;  
+    backface-visibility: hidden;  
+    display: flex;  
+    justify-content: center;  
+    align-items: center;  
+    font-size: 2rem;  
+    user-select: none;  
+  }  
+  .card-front {  
+    background: linear-gradient(135deg, #ffffffcc, #ddddddcc);  
+    box-shadow: inset 0 0 8px rgba(255,255,255,0.6);  
+    color: #333;  
+  }  
+  .card-back {  
+    background: linear-gradient(135deg, #6a11cbcc, #2575fccc);  
+    color: white;  
+    transform: rotateY(180deg);  
+    font-weight: 700;  
+  }  
+  footer {  
+    text-align: center;  
+    padding: 0;  
+    font-size: 0.9rem;  
+    color: #444;  
+    position: sticky;  
+    bottom: 0;  
+    background: linear-gradient(135deg, #a18cd1, #fbc2eb);  
+    width: 100%;  
+    user-select: none;  
+    display: flex;  
+    flex-direction: column;  
+    align-items: center;  
+  }  
+  #powered {  
+    padding: 6px 0 0 0;  
+    width: 100%;  
+  }  
+  #banner-ad {  
+    width: 320px;  
+    height: 50px;  
+    margin: 8px auto 8px auto;  
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
+    background: #eee;  
+    border-radius: 8px;  
+    box-shadow: 0 0 8px rgba(0,0,0,0.12);  
+    color: #888;  
+    font-size: 0.85rem;  
+  }  
+  #popup, #lose-popup {  
+    position: absolute;  
+    top: 50%;  
+    left: 50%;  
+    width: 280px;  
+    background: linear-gradient(135deg, #ffecd2, #fcb69f);  
+    border-radius: 12px;  
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);  
+    transform: translate(-50%, -50%) scale(0);  
+    opacity: 0;  
+    transition: transform 0.4s ease, opacity 0.4s ease;  
+    z-index: 100;  
+    padding: 20px;  
+    text-align: center;  
+    user-select: none;  
+    display: none;  
+  }  
+  #popup.show, #lose-popup.show {  
+    transform: translate(-50%, -50%) scale(1);  
+    opacity: 1;  
+    display: block !important;  
+  }  
+  #popup h2, #lose-popup h2 {  
+    margin: 0 0 12px;  
+    font-size: 1.8rem;  
+    color: #333;  
+    font-weight: 700;  
+    text-shadow: 1px 1px 2px #fff;  
+  }  
+  #popup p, #lose-popup p {  
+    font-size: 1.1rem;  
+    margin: 8px 0;  
+    color: #222;  
+  }  
+  #popup button, #lose-popup button {  
+    margin-top: 16px;  
+    background: orange;  
+    border: none;  
+    color: white;  
+    font-weight: 700;  
+    padding: 10px 20px;  
+    border-radius: 8px;  
+    cursor: pointer;  
+    font-size: 1rem;  
+    box-shadow: 0 4px 8px rgba(255,140,0,0.5);  
+    transition: background-color 0.3s ease;  
+    margin-right: 8px;  
+  }  
+  #popup button:hover, #lose-popup button:hover {  
+    background: #e67300;  
+  }  
+  #lose-popup button:last-child {  
+    margin-right: 0;  
+  }  
+</style>  
+</head>  
+<body>  
+<div id="app" role="main" aria-label="Memory Match Game">  
+  <header>  
+    <h1>Memory Match</h1>  
+    <div id="level" aria-live="polite">Level 1</div>  
+    <div id="toggles" aria-label="Sound and Vibration Controls">  
+      <div class="toggle-group">  
+        <label class="switch" aria-label="Sound On/Off">  
+          <input type="checkbox" id="sound-toggle" checked>  
+          <span class="slider"></span>  
+        </label>  
+        <span class="switch-label">Sound</span>  
+      </div>  
+      <div class="toggle-group">  
+        <label class="switch" aria-label="Vibration On/Off">  
+          <input type="checkbox" id="vibration-toggle" checked>  
+          <span class="slider"></span>  
+        </label>  
+        <span class="switch-label">Vibration</span>  
+      </div>  
+    </div>  
+  </header>  
+  <div id="status-bar" aria-label="Game status">  
+    <div id="score" aria-live="polite">Score: 0</div>  
+    <div id="timer" aria-live="polite">Time: 60s</div>  
+  </div>  
+  <div id="game-board" aria-label="Memory cards grid" tabindex="0"></div>  
+  <footer>  
+    <div id="powered">Powered by NAS</div>  
+    <div id="banner-ad"></div>  
+  </footer>  
+  <!-- Popups -->  
+  <div id="popup" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="popup-title" aria-describedby="popup-desc">  
+    <h2 id="popup-title">Level Complete!</h2>  
+    <p id="popup-desc">Score: <span id="popup-score">0</span></p>  
+    <p>Time Taken: <span id="popup-time">0</span> seconds</p>  
+    <button id="next-level-btn" type="button">Next Level</button>  
+  </div>  
+  <div id="lose-popup" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="lose-popup-title" aria-describedby="lose-popup-desc">  
+    <h2 id="lose-popup-title">Time's Up!</h2>  
+    <p id="lose-popup-desc">You ran out of time.</p>  
+    <button id="restart-btn" type="button">Start From Beginning</button>  
+    <button id="continue-btn" type="button">Continue (Watch Ad)</button>  
+  </div>  
+</div>  
+<!-- Audio Elements -->  
+<audio id="sound-tap" src="https://assets.mixkit.co/sfx/preview/mixkit-game-ball-tap-2073.mp3" preload="auto"></audio>  
+<audio id="sound-win" src="https://assets.mixkit.co/sfx/preview/mixkit-video-game-win-2016.mp3" preload="auto"></audio>  
+<audio id="sound-lose" src="https://assets.mixkit.co/sfx/preview/mixkit-player-losing-or-failing-2042.mp3" preload="auto"></audio>  
+<audio id="sound-celebration" src="https://assets.mixkit.co/sfx/preview/mixkit-festive-game-level-completed-2695.mp3" preload="auto"></audio>  
+<script>  
+(() => {  
+  'use strict';  const REWARDED_AD_UNIT_ID = 'ca-app-pub-6948714269796627/6982752841';
+const BANNER_AD_UNIT_ID = 'ca-app-pub-6948714269796627/7517631973';
 
-  <script src="script.js"></script>
-</body>
+const MAX_LEVEL = 50;
+const MIN_TIME = 20;
+const MAX_TIME = 60;
+
+const gameBoard = document.getElementById('game-board');
+const scoreEl = document.getElementById('score');
+const timerEl = document.getElementById('timer');
+const levelEl = document.getElementById('level');
+const popup = document.getElementById('popup');
+const popupScore = document.getElementById('popup-score');
+const popupTime = document.getElementById('popup-time');
+const nextLevelBtn = document.getElementById('next-level-btn');
+const losePopup = document.getElementById('lose-popup');
+const restartBtn = document.getElementById('restart-btn');
+const continueBtn = document.getElementById('continue-btn');
+
+const soundToggleInput = document.getElementById('sound-toggle');
+const vibrationToggleInput = document.getElementById('vibration-toggle');
+
+const soundTap = document.getElementById('sound-tap');
+const soundWin = document.getElementById('sound-win');
+const soundLose = document.getElementById('sound-lose');
+const soundCelebration = document.getElementById('sound-celebration');
+
+let level = 1;
+let score = 0;
+let timeLeft = MAX_TIME;
+let timerInterval = null;
+let firstCard = null;
+let secondCard = null;
+let lockBoard = false;
+let matchedPairs = 0;
+let totalPairs = 0;
+let startTime = 0;
+
+let soundOn = true;
+let vibrationOn = true;
+
+const cardSymbols = [
+"🍎","🍌","🍇","🍉","🍒","🍓","🍍","🥝","🥥","🍑",
+"🥭","🍐","🍋","🍊","🍈","🍏","🥑","🍅","🥕","🌽",
+"🍔","🍕","🌭","🍿","🍩","🍪","🎂","🍰","🍫","🍬",
+"🍭","☕","🍵","🥤","🍺","🍷","🥂","🍾","🍸","🍹",
+"🎲","🃏","🎯","🎳","🎮","🚗","✈️","🚀","🚲","🏀"
+];
+
+function shuffleArray(array) {
+for(let i = array.length -1; i > 0; i--) {
+const j = Math.floor(Math.random() * (i+1));
+[array[i], array[j]] = [array[j], array[i]];
+}
+return array;
+}
+
+function getCardsCount(level) {
+let pairs = Math.min(2 + Math.floor(level / 5), 10);
+return pairs * 2;
+}
+
+function getTimeForLevel(level) {
+let time = MAX_TIME - (level - 1) * 0.8;
+return Math.max(time, MIN_TIME);
+}
+
+function saveGame() {
+localStorage.setItem('memoryMatchLevel', level);
+localStorage.setItem('memoryMatchScore', score);
+localStorage.setItem('memoryMatchSound', soundOn ? '1' : '0');
+localStorage.setItem('memoryMatchVibration', vibrationOn ? '1' : '0');
+}
+function loadGame() {
+const savedLevel = parseInt(localStorage.getItem('memoryMatchLevel'));
+const savedScore = parseInt(localStorage.getItem('memoryMatchScore'));
+const savedSound = localStorage.getItem('memoryMatchSound');
+const savedVibration = localStorage.getItem('memoryMatchVibration');
+if(!isNaN(savedLevel) && !isNaN(savedScore)) {
+level = savedLevel;
+score = savedScore;
+soundOn = savedSound === '1';
+vibrationOn = savedVibration === '1';
+soundToggleInput.checked = soundOn;
+vibrationToggleInput.checked = vibrationOn;
+return true;
+}
+return false;
+}
+function clearGameSave() {
+localStorage.removeItem('memoryMatchLevel');
+localStorage.removeItem('memoryMatchScore');
+localStorage.removeItem('memoryMatchSound');
+localStorage.removeItem('memoryMatchVibration');
+}
+
+function vibrate(pattern = 200) {
+if(vibrationOn && navigator.vibrate) {
+navigator.vibrate(pattern);
+}
+}
+
+function playSound(audioElement) {
+if(soundOn) {
+audioElement.currentTime = 0;
+audioElement.play();
+}
+}
+
+soundToggleInput.addEventListener('change', () => {
+soundOn = soundToggleInput.checked;
+saveGame();
+});
+vibrationToggleInput.addEventListener('change', () => {
+vibrationOn = vibrationToggleInput.checked;
+saveGame();
+});
+
+function renderCards() {
+gameBoard.innerHTML = '';
+
+const cardsCount = getCardsCount(level);  
+totalPairs = cardsCount / 2;  
+
+const selectedSymbols = shuffleArray(cardSymbols.slice()).slice(0, totalPairs);  
+const cardValues = shuffleArray([...selectedSymbols, ...selectedSymbols]);  
+
+let cols = Math.floor(Math.sqrt(cardsCount));  
+gameBoard.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;  
+
+cardValues.forEach(symbol => {  
+  const card = document.createElement('div');  
+  card.classList.add('card');  
+  card.setAttribute('data-symbol', symbol);  
+  card.setAttribute('tabindex', '0');  
+  card.setAttribute('aria-label', 'Card');  
+  card.setAttribute('role', 'button');  
+
+  const cardInner = document.createElement('div');  
+  cardInner.classList.add('card-inner');  
+
+  const cardFront = document.createElement('div');  
+  cardFront.classList.add('card-front');  
+  cardFront.textContent = '?';  
+
+  const cardBack = document.createElement('div');  
+  cardBack.classList.add('card-back');  
+  cardBack.textContent = symbol;  
+
+  cardInner.appendChild(cardFront);  
+  cardInner.appendChild(cardBack);  
+  card.appendChild(cardInner);  
+
+  card.addEventListener('click', () => onCardClick(card));  
+  card.addEventListener('keydown', e => {  
+    if(e.key === 'Enter' || e.key === ' ') {  
+      e.preventDefault();  
+      onCardClick(card);  
+    }  
+  });  
+
+  gameBoard.appendChild(card);  
+});
+
+}
+
+function onCardClick(card) {
+if(lockBoard) return;
+if(card.classList.contains('flipped')) return;
+playSound(soundTap);
+
+card.classList.add('flipped');  
+
+if(!firstCard) {  
+  firstCard = card;  
+  if(!timerInterval) startTimer();  
+  return;  
+}  
+
+secondCard = card;  
+lockBoard = true;  
+
+checkForMatch();
+
+}
+
+function checkForMatch() {
+const isMatch = firstCard.dataset.symbol === secondCard.dataset.symbol;
+if(isMatch) {
+matchedPairs++;
+score += 10;
+updateScore();
+
+firstCard.removeEventListener('click', onCardClick);  
+  secondCard.removeEventListener('click', onCardClick);  
+
+  vibrate([100, 50, 100]);  
+  playSound(soundWin);  
+
+  resetTurn();  
+
+  if(matchedPairs === totalPairs) {  
+    winLevel();  
+  }  
+} else {  
+  setTimeout(() => {  
+    firstCard.classList.remove('flipped');  
+    secondCard.classList.remove('flipped');  
+    resetTurn();  
+  }, 1000);  
+}
+
+}
+
+function resetTurn() {
+[firstCard, secondCard] = [null, null];
+lockBoard = false;
+}
+
+function updateScore() {
+scoreEl.textContent = Score: ${score};
+saveGame();
+}
+
+function updateLevel() {
+levelEl.textContent = Level ${level};
+}
+
+function startTimer() {
+timeLeft = Math.floor(getTimeForLevel(level));
+timerEl.textContent = Time: ${timeLeft}s;
+startTime = Date.now();
+
+timerInterval = setInterval(() => {  
+  timeLeft--;  
+  timerEl.textContent = `Time: ${timeLeft}s`;  
+  if(timeLeft <= 0) {  
+    clearInterval(timerInterval);  
+    timerInterval = null;  
+    loseLevel();  
+  }  
+}, 1000);
+
+}
+function stopTimer() {
+if(timerInterval) {
+clearInterval(timerInterval);
+timerInterval = null;
+}
+}
+
+function winLevel() {
+stopTimer();
+playSound(soundCelebration);
+vibrate([200, 100, 200]);
+matchedPairs = 0;
+
+popupScore.textContent = score;  
+const timeTaken = Math.floor((Date.now() - startTime) / 1000);  
+popupTime.textContent = timeTaken;  
+
+popup.setAttribute('aria-hidden', 'false');  
+popup.classList.add('show');
+
+}
+
+function loseLevel() {
+playSound(soundLose);
+matchedPairs = 0;
+lockBoard = true;
+
+losePopup.style.display = 'block';  
+losePopup.setAttribute('aria-hidden', 'false');  
+losePopup.classList.add('show');
+
+}
+
+nextLevelBtn.addEventListener('click', () => {
+popup.classList.remove('show');
+popup.setAttribute('aria-hidden', 'true');
+level++;
+if(level > MAX_LEVEL) {
+alert("आपने सभी लेवल पूरे कर लिए हैं! गेम रीसेट होगा।");
+level = 1;
+score = 0;
+clearGameSave();
+}
+updateLevel();
+updateScore();
+resetGame();
+});
+
+restartBtn.addEventListener('click', () => {
+losePopup.classList.remove('show');
+losePopup.setAttribute('aria-hidden', 'true');
+losePopup.style.display = 'none';
+level = 1;
+score = 0;
+updateLevel();
+updateScore();
+resetGame();
+});
+
+continueBtn.addEventListener('click', () => {
+losePopup.classList.remove('show');
+losePopup.setAttribute('aria-hidden', 'true');
+losePopup.style.display = 'none';
+
+showRewardedAd().then(() => {  
+  timeLeft = 15;  
+  timerEl.textContent = `Time: ${timeLeft}s`;  
+  lockBoard = false;  
+  startTimer();  
+}).catch(() => {  
+  level = 1;  
+  score = 0;  
+  updateLevel();  
+  updateScore();  
+  resetGame();  
+});
+
+});
+
+function resetGame() {
+stopTimer();
+firstCard = null;
+secondCard = null;
+lockBoard = false;
+matchedPairs = 0;
+renderCards();
+}
+
+function showRewardedAd() {
+return new Promise((resolve, reject) => {
+// AdMob rewarded ad placeholder ID: ca-app-pub-6948714269796627/6982752841
+// Replace this with actual ad integration in your Android/iOS app or WebView bridge
+const watched = confirm("Watch rewarded ad to continue?");
+if(watched) {
+console.log('Rewarded ad watched - Ad Unit ID:', REWARDED_AD_UNIT_ID);
+resolve();
+} else {
+reject();
+}
+});
+}
+
+// Banner ad placeholder: Native Android/iOS SDK यहाँ बैनर दिखाएगा
+document.getElementById('banner-ad').innerHTML = '';
+// यहाँ कोई JS बैनर नहीं, Native SDK अपने आप दिखाएगा
+
+window.addEventListener('load', () => {
+const hasSave = loadGame();
+updateLevel();
+updateScore();
+if(hasSave) {
+if(confirm("आपका पिछला गेम मिला। जारी रखना चाहते हैं? (Continue के लिए Ad देखें)")) {
+showRewardedAd().then(() => {
+resetGame();
+}).catch(() => {
+level = 1;
+score = 0;
+updateLevel();
+updateScore();
+resetGame();
+});
+} else {
+level = 1;
+score = 0;
+updateLevel();
+updateScore();
+resetGame();
+}
+} else {
+resetGame();
+}
+});
+})();
+</script>
+
+</body>  
 </html>
+
+  
