--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory Match</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Memory Match Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Memory Match Game</h1>
-  <div class="game-container" id="game-container"></div>
-  <div class="win-popup" id="win-popup">
-    <p>You Win!</p>
-    <button onclick="nextLevel()">Next Level</button>
+  <div id="game-container">
+    <h1>Memory Match</h1>
+    <div id="board"></div>
+    <div id="level-info">Level: <span id="level">1</span></div>
+    <div id="win-popup" class="hidden">
+      <h2>You Win!</h2>
+      <button onclick="nextLevel()">Next Level</button>
+    </div>
   </div>
-  <div class="footer">Powered by NAS</div>
   <script src="script.js"></script>
 </body>
 </html>
