--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
   <footer>
     Powered by NAS
   </footer>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '1401828e48164d6e5d2cfae0724ee0df',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
   <!-- Win Popup -->
   <div id="popup" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="popup-title" aria-describedby="popup-desc">
     <h2 id="popup-title">Level Complete!</h2>
