--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 
 <!-- Audio Elements -->
-<audio id="sound-tap" src="https://assets.mixkit.co/sfx/preview/mixkit-game-ball-tap-2073.mp3" preload="auto"></audio>
+<audio id="sound-tap" src="tap-notification-180637.mp3" preload="auto"></audio>
 <audio id="sound-win" src="https://assets.mixkit.co/sfx/preview/mixkit-video-game-win-2016.mp3" preload="auto"></audio>
 <audio id="sound-lose" src="https://assets.mixkit.co/sfx/preview/mixkit-player-losing-or-failing-2042.mp3" preload="auto"></audio>
 <audio id="sound-celebration" src="https://assets.mixkit.co/sfx/preview/mixkit-festive-game-level-completed-2695.mp3" preload="auto"></audio>
