--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   </footer>
 
 <script type="text/javascript" src="//www.highperformanceformat.com/1401828e48164d6e5d2cfae0724ee0df/invoke.js"></script>
+
   <!-- Win Popup -->
   <div id="popup" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="popup-title" aria-describedby="popup-desc">
     <h2 id="popup-title">Level Complete!</h2>
@@ -60,9 +61,9 @@
 </div>
 
 <!-- Audio Elements -->
-<audio id="sound-tap" src="tap-notification-180637.mp3" preload="auto"></audio>
-<audio id="sound-win" src="https://assets.mixkit.co/sfx/preview/mixkit-video-game-win-2016.mp3" preload="auto"></audio>
-<audio id="sound-lose" src="https://assets.mixkit.co/sfx/preview/mixkit-player-losing-or-failing-2042.mp3" preload="auto"></audio>
+<audio id="sound-tap" src="sounds/tap-notification-180637.mp3" preload="auto"></audio>
+<audio id="sound-win" src="sounds/short-success-sound-glockenspiel-treasure-video-game-6346.mp3" preload="auto"></audio>
+<audio id="sound-lose" src="sounds/fiasco-154915.mp3" preload="auto"></audio>
 <audio id="sound-celebration" src="https://assets.mixkit.co/sfx/preview/mixkit-festive-game-level-completed-2695.mp3" preload="auto"></audio>
 
 <script src="script.js"></script>
