--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
 </div>
 
 <!-- Audio Elements -->
-<audio id="sound-tap" src="sounds/tap-notification-180637.mp3" preload="auto"></audio>
-<audio id="sound-win" src="sounds/short-success-sound-glockenspiel-treasure-video-game-6346.mp3" preload="auto"></audio>
-<audio id="sound-lose" src="sounds/fiasco-154915.mp3" preload="auto"></audio>
+<audio id="sound-tap" src="https://heykishannn.github.io/Memory-match-/sounds/tap-notification-180637.mp3" preload="auto"></audio>
+<audio id="sound-win" src="https://heykishannn.github.io/Memory-match-/sounds/short-success-sound-glockenspiel-treasure-video-game-6346.mp3" preload="auto"></audio>
+<audio id="sound-lose" src="https://heykishannn.github.io/Memory-match-/sounds/fiasco-154915.mp3" preload="auto"></audio>
 <audio id="sound-celebration" src="https://assets.mixkit.co/sfx/preview/mixkit-festive-game-level-completed-2695.mp3" preload="auto"></audio>
-
-<script src="script.js"></script>
-</body>
-</html>
