--- a/index.html
+++ b/index.html
@@ -2,56 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Memory Match Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
-    <div id="start-screen">
-      <h1>Memory Match</h1>
-      <button onclick="startGame()">Start</button>
-    </div>
-
     <header>
       <h1>Memory Match</h1>
       <div id="level">Level: 1</div>
+      <div id="toggles">
+        <label class="switch">
+          <input type="checkbox" id="sound-toggle" checked />
+          <span class="slider"></span>
+          <span class="switch-label">Sound</span>
+        </label>
+        <label class="switch">
+          <input type="checkbox" id="vibration-toggle" checked />
+          <span class="slider"></span>
+          <span class="switch-label">Vibration</span>
+        </label>
+      </div>
+      <div id="status-bar">
+        <div id="score">Score: 0</div>
+        <div id="timer">Time: 60</div>
+      </div>
     </header>
-
-    <div id="toggles">
-      <label class="switch">
-        <span class="switch-label">Sound</span>
-        <input type="checkbox" id="sound-toggle" checked>
-        <span class="slider"></span>
-      </label>
-      <label class="switch">
-        <span class="switch-label">Vibrate</span>
-        <input type="checkbox" id="vibrate-toggle" checked>
-        <span class="slider"></span>
-      </label>
-    </div>
-
-    <div id="status-bar">
-      <div id="score">Score: 0</div>
-      <div id="timer">Time: 60</div>
-    </div>
-
-    <div id="game-board"></div>
-
-    <footer>Powered by NAS</footer>
+    <main id="game-board"></main>
 
     <div id="popup">
-      <h2>Well Done!</h2>
-      <p>You completed the level.</p>
+      <h2>Level Complete!</h2>
+      <p>Great job! Ready for next level?</p>
       <button id="next-level-btn">Next Level</button>
+      <button id="restart-btn">Restart</button>
     </div>
 
     <div id="lose-popup">
-      <h2>Time's Up!</h2>
-      <p>Want to continue?</p>
-      <button id="restart-btn">Start Over</button>
-      <button id="continue-btn">Continue</button>
+      <h2>Game Over!</h2>
+      <p>Try again or restart the game.</p>
+      <button id="try-again-btn">Try Again</button>
+      <button id="restart-btn-lose">Restart</button>
     </div>
+
+    <footer>
+      Powered by NAS
+    </footer>
   </div>
 
   <script src="script.js"></script>
