--- a/index.html
+++ b/index.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Memory Match</title>
-  <link rel="stylesheet" href="style.css"/>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics-compat.js"></script>
-  <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Memory Match Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
     <header>
       <h1>Memory Match</h1>
       <div id="level">Level 1</div>
+      <div id="toggles">
+        <label class="switch">
+          <span class="switch-label">Sound</span>
+          <input type="checkbox" id="sound-toggle" checked>
+          <span class="slider"></span>
+        </label>
+        <label class="switch">
+          <span class="switch-label">Vibration</span>
+          <input type="checkbox" id="vibration-toggle" checked>
+          <span class="slider"></span>
+        </label>
+      </div>
     </header>
-    <div id="toggles">
-      <label class="switch">
-        <span class="switch-label">Sound</span>
-        <input type="checkbox" id="soundToggle" checked />
-        <span class="slider"></span>
-      </label>
-    </div>
+
     <div id="status-bar">
-      <span id="score">Score: 0</span>
-      <span id="timer">Time: 60s</span>
+      <div id="score">Score: 0</div>
+      <div id="timer">Time: 0s</div>
     </div>
+
     <div id="game-board"></div>
+
+    <footer>
+      Powered by NAS
+      <div id="banner-ad"></div>
+    </footer>
 
     <div id="popup">
       <h2>You Win!</h2>
-      <p>Score: <span id="final-score"></span></p>
-      <p>Time Left: <span id="final-time"></span></p>
-      <button onclick="nextLevel()">Next Level</button>
+      <p>Level Complete</p>
+      <button id="next-level">Next Level</button>
     </div>
 
     <div id="lose-popup">
-      <h2>Game Over</h2>
-      <p>Try again or watch an ad to continue?</p>
-      <button onclick="restartGame()">Start Over</button>
-      <button onclick="watchAdToContinue()">Continue</button>
+      <h2>You Lost!</h2>
+      <p>Try Again?</p>
+      <button id="restart">Start Over</button>
+      <button id="continue">Continue (Ad)</button>
     </div>
 
-    <footer>
-      Powered by NAS<br />
+    <div id="start-popup" class="popup">
+      <h2>Welcome Back!</h2>
+      <p>Do you want to continue where you left off?</p>
+      <button id="start-over">Start Over</button>
+      <button id="resume">Continue (Ad)</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+  <script>
+    // AdMob Banner Ad
+    const banner = document.createElement('script');
+    banner.setAttribute('data-ad-client', 'ca-pub-6948714269796627');
+    banner.async = true;
+    banner.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+    document.head.appendChild(banner);
+
+    const adDiv = document.getElementById('banner-ad');
+    adDiv.innerHTML = `
       <ins class="adsbygoogle"
         style="display:block"
         data-ad-client="ca-pub-6948714269796627"
         data-ad-slot="7517631973"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
-    </footer>
-  </div>
-
-  <audio id="tapSound" src="tap.mp3"></audio>
-  <audio id="winSound" src="win.mp3"></audio>
-  <audio id="loseSound" src="lose.mp3"></audio>
-
-  <script src="script.js"></script>
-  <script>
+    `;
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </body>
