--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>  
 <meta charset="UTF-8" />  
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />  
-<title>Memory Match Game</title>  
+<title>MEMORY MATCH Game</title>  
 <link rel="stylesheet" href="style.css">  
 </head>  
 <body>  <div id="app" role="main" aria-label="Memory Match Game">    <header>  
@@ -42,3 +42,4 @@
 <audio id="sound-lose" src="https://heykishannn.github.io/Memory-match-/sounds/fiasco-154915.mp3" preload="auto"></audio>
 <audio id="sound-celebration" src="https://assets.mixkit.co/sfx/preview/mixkit-festive-game-level-completed-2695.mp3" preload="auto"></audio>
 
+    
