--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>MEMORY MATCH Game</title>
+  <meta name="viewport" content="width=360, height=640, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <title>Memory Match Game</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -40,8 +40,26 @@
     <button id="restartBtn" class="btn-primary">Restart Game</button>
   </div>
 
-  <audio id="flipSound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
-  <audio id="matchSound" src="https://actions.google.com/sounds/v1/cartoon/concussive_hit_guitar_boing.ogg" preload="auto"></audio>
+  <!-- Popup Modal -->
+  <div id="popup" class="popup hidden">
+    <div class="popup-content">
+      <h2 id="popupTitle">You Win!</h2>
+      <p id="popupMessage">Level Complete!</p>
+      <div class="popup-buttons">
+        <button id="homeBtn" class="btn-primary">Home</button>
+        <button id="nextLevelBtn" class="btn-primary">Next Level</button>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    Powered by NAS
+  </footer>
+
+  <!-- Audio Files -->
+  <audio id="flipSound" src="tap.mp3" preload="auto"></audio>
+  <audio id="matchSound" src="win.mp3" preload="auto"></audio>
+  <audio id="loseSound" src="lose.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
