--- a/index.html
+++ b/index.html
@@ -9,31 +9,35 @@
 <body>
   <!-- Start Screen -->
   <div id="start-screen" class="center-screen">
-    <h1>Memory Match</h1>
+    <h1>MEMORY MATCH</h1>
     <button id="startBtn" class="btn-primary">Start</button>
   </div>
 
   <!-- Game Screen -->
   <div id="game-screen" class="hidden">
     <header>
-      <div class="status-info">
-        <div>Level: <span id="levelDisplay">1</span></div>
-        <div>Score: <span id="scoreDisplay">0</span></div>
-        <div>Time: <span id="timerDisplay">0</span>s</div>
-      </div>
-      <div class="toggles">
-        <label class="switch">
-          <input type="checkbox" id="vibrationToggle" checked />
-          <span class="slider"></span>
-          <span class="label-text">Vibration</span>
-        </label>
-        <label class="switch">
+      <div class="toggle-left">
+        <label class="switch orange-switch">
           <input type="checkbox" id="soundToggle" checked />
           <span class="slider"></span>
           <span class="label-text">Sound</span>
         </label>
       </div>
+      <h1 class="game-title">MEMORY MATCH</h1>
+      <div class="toggle-right">
+        <label class="switch orange-switch">
+          <input type="checkbox" id="vibrationToggle" checked />
+          <span class="slider"></span>
+          <span class="label-text">Vibration</span>
+        </label>
+      </div>
     </header>
+
+    <div class="status-info">
+      <div>Level: <span id="levelDisplay">1</span></div>
+      <div>Score: <span id="scoreDisplay">0</span></div>
+      <div>Time: <span id="timerDisplay">0</span>s</div>
+    </div>
 
     <main>
       <div class="game-container" id="game"></div>
@@ -59,6 +63,11 @@
     <div class="popup-content">
       <h2 id="popupTitle">You Win!</h2>
       <p id="popupMessage">Level Complete!</p>
+      <div class="popup-stats">
+        <div>Level: <span id="popupLevel"></span></div>
+        <div>Score: <span id="popupScore"></span></div>
+        <div>Time: <span id="popupTime"></span>s</div>
+      </div>
       <div class="popup-buttons">
         <button id="homeBtn" class="btn-primary">Home</button>
         <button id="nextLevelBtn" class="btn-primary">Next Level</button>
