--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
   <!-- Game Screen -->
   <div id="game-screen" class="hidden">
     <header>
-      <div class="toggle-left">
-        <label class="switch orange-switch">
+      <h1 class="game-title">MEMORY MATCH</h1>
+      <div class="toggles-row">
+        <label class="switch orange-switch toggle-left">
           <input type="checkbox" id="soundToggle" checked />
           <span class="slider"></span>
           <span class="label-text">Sound</span>
         </label>
-      </div>
-      <h1 class="game-title">MEMORY MATCH</h1>
-      <div class="toggle-right">
-        <label class="switch orange-switch">
+        <label class="switch orange-switch toggle-right">
           <input type="checkbox" id="vibrationToggle" checked />
           <span class="slider"></span>
           <span class="label-text">Vibration</span>
