--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="toggle-label">Sound</div>
         </div>
 
-        <button id="pauseBtn" class="btn-pause" title="Pause Game">❚❚</button>
+        <button id="pauseBtn" class="btn-pause" title="Pause/Resume Game">❚❚</button>
 
         <div class="toggle-wrapper toggle-right">
           <label class="switch orange-switch">
