--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
   </footer>
 
   <!-- Audio Files -->
-  <audio id="flipSound" src="tap.mp3.mp3" preload="auto"></audio>
-  <audio id="matchSound" src="win.mp3.mp3" preload="auto"></audio>
-  <audio id="restartSound" src="restart.mp3.mp3" preload="auto"></audio>
+  <audio id="flipSound" src="tap.mp3" preload="auto"></audio>
+  <audio id="matchSound" src="win.mp3" preload="auto"></audio>
+  <audio id="loseSound" src="lose.mp3" preload="auto"></audio>
+  <audio id="pauseSound" src="pause.mp3" preload="auto"></audio>
+  <audio id="restartSound" src="restart.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
