--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
          data-ad-client="ca-pub-6948714269796627"
          data-ad-slot="7517631973"></ins>
   </div>
+</div>
+	
 <script type="text/javascript">
 	atOptions = {
 		'key' : '1401828e48164d6e5d2cfae0724ee0df',
